--- a/template/menu.html
+++ b/template/menu.html
@@ -1,6 +1,6 @@
 <template id="menu-template">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"><img src="/img/CF_Mark.jpg" width="50"></a>
+        <a class="navbar-brand" href="/index.html"><img src="/img/JK-Fav-Dark.svg" width="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Challenge10/index.html">10-Most used word</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://github.com/JonathanKayDev/JSCodingChallenges">Git Repo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://www.jonathankay.dev">About</a>
                 </li>
             </ul>
         </div>
