--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,10 @@
+:root {
+    --primary-color: #1d5888;
+    --secondary-color: #32c3af;
+    --dark-color: #292929;
+    --light-color: #e7e7e7;
+}
+
 body, html{
     height: 100%;
 }
@@ -25,3 +32,36 @@ main{
     padding-top: 6rem;
 }
 
+main>.container {
+    padding: 60px 15px 0;
+    margin-bottom: 5rem;
+}
+
+footer {
+    background-color: var(--dark-color);
+}
+
+h1,h2,h3,h4,h5,h6 {
+    color: var(--primary-color);
+}
+
+footer {
+    padding-right: 1rem;
+}
+
+footer .social>a {
+    color: var(--light-color);
+    opacity: 0.75;
+}
+
+footer .social>a:hover {
+    opacity: 0.9;
+    color: var(--secondary-color);
+}
+
+.sticky-footer {
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
